public/css/profile.css
html,body{
    height: 100%;
    width: 100%;
}

.hidden {
    display: none;
}

.sub-box{
    padding-left: 50px;
    display: grid;
    grid-template-rows: 50% 25% 25%;
}
.profile_form{
    max-width: 1600px;

}

.profile_pic_box{
    display: flex;
    justify-content: center;
}

#profile_picture{
    position:relative;
    top:50px;
    right:50px;
    border-radius: 50%;
    border:1px solid white;
    width: 200px;
    height: 200px;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
}

#pen{
    position: relative;
    top:210px;
    right:80px;
}

#pen:hover{
    transition: transform .5s ease;
    transform: scale(0.9);
}

#myfile{
    display: none;
}



.profile_details{
    max-width: 1600px;
}

.pname{
    font-weight: 700;
    font-size: large;
}

hr{
    border:1px black solid;
    width:100%;
    position: relative;
    right:30px;
}

.hidden{
    display: none;
}

#progress_i{
    width:800px;
}

/* #progress_bar_i{
    width: 50%;
} */

